# workshop-dds

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md
cpp/: CMakeLists.txt  README.md  conanfile.py
cpp/conan/: CMakeLists.txt  compile_commands.json  conanfile.py
cpp/conan/idl/: Awesome.hpp  AwesomeCdrAux.ipp  AwesomeTypeObjectSupport.cxx  AwesomeTypeObjectSupport.hpp
cpp/conan/idls/: CMakeLists.txt
cpp/conan/idls/idls/: Awesome.hpp  AwesomeCdrAux.hpp  AwesomeCdrAux.ipp  AwesomePubSubTypes.cxx  AwesomePubSubTypes.hpp  AwesomeTypeObjectSupport.cxx  AwesomeTypeObjectSupport.hpp  MoveCommand.hpp  MoveCommand.idl  MoveCommandCdrAux.hpp  MoveCommandCdrAux.ipp  MoveCommandPubSubTypes.cxx  MoveCommandPubSubTypes.hpp  MoveCommandTypeObjectSupport.cxx  MoveCommandTypeObjectSupport.hpp  WeaponCommand.hpp  WeaponCommand.idl  WeaponCommandCdrAux.hpp  WeaponCommandCdrAux.ipp  WeaponCommandPubSubTypes.cxx  WeaponCommandPubSubTypes.hpp  WeaponCommandTypeObjectSupport.cxx  WeaponCommandTypeObjectSupport.hpp
cpp/conan/solution/: CMakeLists.txt
cpp/conan/solution/DiscoveryServer/: CMakeLists.txt  main.cpp
cpp/conan/solution/DomainDiscovery/: CMakeLists.txt  main.cpp
cpp/conan/solution/Publisher/: CMakeLists.txt  main.cpp
cpp/conan/solution/Subscriber/: main.cpp
cpp/conan/solution/config/: EIVAQos.xml
cpp/exercises/01/: README.md
cpp/exercises/02/: README.md
cpp/exercises/03/: README.md
cpp/exercises/04/: README.md
cpp/exercises/05/: README.md
cpp/exercises/06/: README.md
cpp/exercises/07/: README.md
cpp/idl/: Awesome.hpp  Awesome.idl  AwesomeCdrAux.ipp  CMakeLists.txt
cpp/msvc/: build_idls.bat
cpp/msvc/Solution/: NuGet.Config  Solution.sln
cpp/msvc/Solution/Config/: Config.vcxitems
cpp/msvc/Solution/DiscoveryServer/: DiscoveryServer.cpp  DiscoveryServer.vcxproj  DiscoveryServer.vcxproj.filters  packages.config
cpp/msvc/Solution/DomainDiscovery/: DomainDiscovery.cpp  DomainDiscovery.vcxproj  DomainDiscovery.vcxproj.filters
cpp/msvc/Solution/IDL/: IDL.vcxproj  IDL.vcxproj.filters
cpp/msvc/Solution/Publisher/: Publisher.vcxproj  Publisher.vcxproj.filters  (+1 more)
cpp/msvc/idl/: CMakeLists.txt  conanfile.py
cpp/msvc/idls/: CMakeLists.txt
cpp/msvc/idls/idls/: CMakeLists.txt
cpp/solution/: CMakeLists.txt
cpp/solution/Publisher/: main.cpp
cpp/solution/Subscriber/: CMakeLists.txt
csharp/: README.md
csharp/FastDDSExamples.Net/: FastDDSExamples.Net.sln
csharp/FastDDSExamples.Net/DiscoveryServer/: EIVAQos.xml  Program.cs
csharp/FastDDSExamples.Net/DomainDiscovery/: DomainDiscovery.csproj  Program.cs
csharp/FastDDSExamples.Net/IDL.Net/: IDL.Net.csproj
csharp/FastDDSExamples.Net/Publisher/: Program.cs  Publisher.csproj
csharp/FastDDSExamples.Net/Subscriber/: EIVAQos.xml  Program.cs  Subscriber.csproj
csharp/IDL/: CMakeLists.txt  build_idls.bat  conanfile_fastddsgen.py  conanfile_fastddsgen_compile.py  conanfile_swig.py
csharp/IDL/idl/: Awesome.idl  MoveCommand.idl  WeaponCommand.idl
csharp/Solution/: Solution.sln
csharp/Solution/DiscoveryServer/: DiscoveryServer.csproj  Program.cs
csharp/Solution/DomainDiscovery/: DomainDiscovery.csproj  Program.cs
csharp/Solution/IDL.Net/: IDL.Net.csproj
csharp/Solution/Publisher/: Program.cs  Publisher.csproj
csharp/Solution/Subscriber/: Program.cs  Subscriber.csproj
csharp/Solution/config/: EIVAQos.xml
csharp/exercises/01/: README.md
csharp/exercises/02/: README.md
csharp/exercises/03/: README.md
csharp/exercises/04/: README.md
csharp/exercises/05/: README.md
csharp/exercises/06/: README.md
csharp/exercises/07/: README.md
(+7 files in other folders)
